@@ -16,21 +16,21 @@
 "Шлях"
 
 "-бітны"
-"Модуль:"
-"Поўны шлях:"
-"PID:"
-"Бацькоўскі PID:"
-"Пяршынства:"
-"Нітак:"
-"Запушчаны:"
-"Выконваецца:"
+"Модуль"
+"Поўны шлях"
+"PID"
+"Бацькоўскі PID"
+"Пяршынства"
+"Нітак"
+"Запушчаны"
+"Выконваецца"
 
-"Памер усіх модулей:"
-"Памер кучы памяці:"
+"Памер усіх модулей"
+"Памер кучы памяці"
 
-"Акно:"
-"Стыль акна:"
-"Пашыраны стыль:"
+"Акно"
+"Стыль акна"
+"Пашыраны стыль"
 
 "Выдаленне працесу"
 "Вы жадаеце выдаліць \"{0}\"?"
@@ -65,22 +65,22 @@
 "Змяніць прыярытэт"
 "Вы жадаеце змяніць прыярытэт для ўсіх абраных прйцэсаў"
 
-"Аб'ектаў GDI:"
-"Аб'ектаў USER:"
+"Аб'ектаў GDI"
+"Аб'ектаў USER"
 
-"Камандны радок:"
-"Бягучы каталог:"
-"Зменныя асяроддзя:"
+"Камандны радок"
+"Бягучы каталог"
+"Зменныя асяроддзя"
 
-"Версія файлу:"
-"Апісанне:"
+"Версія файлу"
+"Апісанне"
 
-"Модулі:"
+"Модулі"
 "База"
 "Памер"
 "Шлях, версія, апісанне"
 "Шлях (версія і апісанне не адлюстраваны)"
-"Апрацоўнікі:"
+"Апрацоўнікі"
 "Апрацоўнік"
 "Доступ"
 "Тып"
@@ -160,18 +160,18 @@
 "/с"
 
 "Парадкаваць"
-"&Імя                           Ctrl-F3"
-"Пашы&рэннее                    Ctrl-F4"
-"Час &запуску                   Ctrl-F5"
-"П&амер                         Ctrl-F6"
-"&Не парадкаваць                Ctrl-F7"
-"А&пісанні                      Ctrl-F10"
-"&Уладальнікі                   Ctrl-F11"
-"Ужывць &суполкі парадкавання   Shift-F11"
-"А&дмечаныя файлы ўперад        Shift-F12"
+"&Імя                           Ctrl+F3"
+"Пашы&рэннее                    Ctrl+F4"
+"П&амер                         Ctrl+F6"
+"&Не парадкаваць                Ctrl+F7"
+"Час &запуску                   Ctrl+F8"
+"А&пісанні                      Ctrl+F10"
+"&Уладальнікі                   Ctrl+F11"
+"Ужывць &суполкі парадкавання   Shift+F11"
+"А&дмечаныя файлы ўперад        Shift+F12"
 
-"Уладальнік:"
-"Сеанс:"
+"Уладальнік"
+"Сеанс"
 
 "Адмоўлена ў доступе"
 "Недастаткова прівілеяў"
