@@ -16,21 +16,21 @@
 "Pathname"
 
 "-bit"
-"Module:"
-"Full path:"
-"PID:"
-"Parent PID:"
-"Priority:"
-"Threads:"
-"Started at:"
-"Uptime:"
+"Module"
+"Full path"
+"PID"
+"Parent PID"
+"Priority"
+"Threads"
+"Started at"
+"Uptime"
 
-"Size of all modules:"
-"Memory heap size:"
+"Size of all modules"
+"Memory heap size"
 
-"Window title:"
-"Window style:"
-"Extended style:"
+"Window title"
+"Window style"
+"Extended style"
 
 "Kill process"
 "Do you wish to kill \"{0}\"?"
@@ -65,22 +65,22 @@
 "Change Priority"
 "Do you want to change priorities of the selected processes?"
 
-"GDI Objects:"
-"USER Objects:"
+"GDI Objects"
+"USER Objects"
 
-"Command Line:"
-"Current Directory:"
-"Environment:"
+"Command Line"
+"Current Directory"
+"Environment"
 
-"File version:"
-"Description:"
+"File version"
+"Description"
 
-"Modules:"
+"Modules"
 "Base"
 "Size"
 "Path, version, description"
 "Path (version info is not displayed)"
-"Handles:"
+"Handles"
 "Handle"
 "Access"
 "Type"
@@ -160,18 +160,18 @@
 "/sec"
 
 "Sort by"
-"&Name                 Ctrl-F3"
-"E&xtension            Ctrl-F4"
-"S&tart time           Ctrl-F5"
-"&Size                 Ctrl-F6"
-"&Unsorted             Ctrl-F7"
-"&Descriptions         Ctrl-F10"
-"&Owner                Ctrl-F11"
-"Use sort &groups      Shift-F11"
-"Show selected &first  Shift-F12"
+"&Name                 Ctrl+F3"
+"E&xtension            Ctrl+F4"
+"&Size                 Ctrl+F6"
+"&Unsorted             Ctrl+F7"
+"S&tart time           Ctrl+F8"
+"&Descriptions         Ctrl+F10"
+"&Owner                Ctrl+F11"
+"Use sort &groups      Shift+F11"
+"Show selected &first  Shift+F12"
 
-"Owner:"
-"Session:"
+"Owner"
+"Session"
 
 "Access denied"
 "Insufficient privilege"
