@@ -16,21 +16,21 @@
 "Percorso"
 
 "-bit"
-"Modulo:"
-"Percorso:"
-"PID:"
-"PID Precedente:"
-"Priorita':"
-"Threads:"
-"Avviato A:"
-"Attivo Da:"
+"Modulo"
+"Percorso"
+"PID"
+"PID Precedente"
+"Priorita'"
+"Threads"
+"Avviato A"
+"Attivo Da"
 
-"Dim. Moduli:"
-"Dim. MemoriaHeap:"
+"Dim. Moduli"
+"Dim. MemoriaHeap"
 
-"Titolo Finestra:"
-"Stile Finestra:"
-"Stile Esteso:"
+"Titolo Finestra"
+"Stile Finestra"
+"Stile Esteso"
 
 "Termina Processo"
 "Vuoi Terminare \"{0}\"?"
@@ -65,22 +65,22 @@
 "Cambia Priorita'"
 "Vuoi Cambiare Priorita' Al Processo Selezionato?"
 
-"Oggetti GDI:"
-"Oggetti USER:"
+"Oggetti GDI"
+"Oggetti USER"
 
-"Linea Di Comando:"
-"Cartella Corrente:"
-"Ambiente:"
+"Linea Di Comando"
+"Cartella Corrente"
+"Ambiente"
 
-"Versione File:"
-"Descrizione:"
+"Versione File"
+"Descrizione"
 
-"Moduli:"
+"Moduli"
 "Base"
 "Dim."
 "Descrizione Percorso"
 "Percorso (versione non mostrata)"
-"Handles:"
+"Handles"
 "Handle"
 "Accesso"
 "Tipo"
@@ -160,18 +160,18 @@
 "/sec"
 
 "Ordina Per"
-"&Nome                     [Ctrl-F3]"
-"&Estensione               [Ctrl-F4]"
-"&Ora Avvio                [Ctrl-F5]"
-"&Dimensione               [Ctrl-F6]"
-"&Senza Ordine             [Ctrl-F7]"
-"Des&crizione             [Ctrl-F10]"
-"&Proprietario            [Ctrl-F11]"
-"&Usa Gruppi Ordinamento [Shift-F11]"
-"&Mostra Selezionati     [Shift-F12]"
+"&Nome                     Ctrl+F3"
+"&Estensione               Ctrl+F4"
+"&Dimensione               Ctrl+F6"
+"&Senza Ordine             Ctrl+F7"
+"&Ora Avvio                Ctrl+F8"
+"Des&crizione             Ctrl+F10"
+"&Proprietario            Ctrl+F11"
+"&Usa Gruppi Ordinamento Shift+F11"
+"&Mostra Selezionati     Shift+F12"
 
-"Proprietario:"
-"Sessione:"
+"Proprietario"
+"Sessione"
 
 "Accesso Negato"
 "Privilegi Non Sufficienti"
