@@ -16,21 +16,21 @@
 "Ścieżka"
 
 "-bit"
-"Moduł:"
-"Pełna ścieżka:"
-"PID:"
-"PID rodzica:"
-"Priorytet:"
-"Wątki:"
-"Uruchomiony od:"
-"Czas działania:"
+"Moduł"
+"Pełna ścieżka"
+"PID"
+"PID rodzica"
+"Priorytet"
+"Wątki"
+"Uruchomiony od"
+"Czas działania"
 
-"Size of all modules:"
-"Memory heap size:"
+"Size of all modules"
+"Memory heap size"
 
-"Tytuł Okna:"
-"Styl okna:"
-"Styl rozszerzony:"
+"Tytuł Okna"
+"Styl okna"
+"Styl rozszerzony"
 
 "Zakończ proces"
 "Chcesz zabić proces \"{0}\"?"
@@ -65,22 +65,22 @@
 "Zmień priorytet"
 "Chcesz zmienić priorytet zaznaczonych procesów?"
 
-"Obiekty GDI:"
-"Obiekty USER:"
+"Obiekty GDI"
+"Obiekty USER"
 
-"Linia poleceń:"
-"Bieżączy folder:"
-"Środowisko:"
+"Linia poleceń"
+"Bieżączy folder"
+"Środowisko"
 
-"Wersja pliku:"
-"Opis:"
+"Wersja pliku"
+"Opis"
 
-"Moduły:"
+"Moduły"
 "Adres"
 "Wielk."
 "Ścieżka, wersja, opis"
 "Path (version info is not displayed)"
-"Uchwyty:"
+"Uchwyty"
 "Handle"
 "Access"
 "Type"
@@ -160,18 +160,18 @@
 "/sec"
 
 "Sortuj wg"
-"&Nazwy                Ctrl-F3"
-"&Rozszerzenia         Ctrl-F4"
-"&Czasu uruch.         Ctrl-F5"
-"&Wielkości            Ctrl-F6"
-"&Bez sortowania       Ctrl-F7"
-"&Opisu                Ctrl-F10"
-"Właśc&iciela          Ctrl-F11"
-"Użyj &grup sort.      Shift-F11"
-"&Najpierw zaznaczone  Shift-F12"
+"&Nazwy                Ctrl+F3"
+"&Rozszerzenia         Ctrl+F4"
+"&Wielkości            Ctrl+F6"
+"&Bez sortowania       Ctrl+F7"
+"&Czasu uruch.         Ctrl+F8"
+"&Opisu                Ctrl+F10"
+"Właśc&iciela          Ctrl+F11"
+"Użyj &grup sort.      Shift+F11"
+"&Najpierw zaznaczone  Shift+F12"
 
-"Właściciel:"
-"Sesja:"
+"Właściciel"
+"Sesja"
 
 "Brak dostępu"
 "Brak uprawnień"
