@@ -16,21 +16,21 @@
 "Pathname"
 
 "-битный"
-"Модуль:"
-"Полный путь:"
-"PID:"
-"Parent PID:"
-"Приоритет:"
-"Нитей:"
-"Запущен:"
-"Выполняется:"
+"Модуль"
+"Полный путь"
+"PID"
+"Parent PID"
+"Приоритет"
+"Нитей"
+"Запущен"
+"Выполняется"
 
-"Размер всех модулей:"
-"Memory heap size:"
+"Размер всех модулей"
+"Memory heap size"
 
-"Окно:"
-"Стиль окна:"
-"Расшир. стиль:"
+"Окно"
+"Стиль окна"
+"Расшир. стиль"
 
 "Удаление процесса"
 "Вы хотите удалить \"{0}\"?"
@@ -65,22 +65,22 @@
 "Изменить приоритет"
 "Вы хотите изменить приоритет для всех выделенных процессов?"
 
-"Объектов GDI:"
-"Объектов USER:"
+"Объектов GDI"
+"Объектов USER"
 
-"Командная строка:"
-"Текущий каталог:"
-"Переменные окружения:"
+"Командная строка"
+"Текущий каталог"
+"Переменные окружения"
 
-"Версия файла:"
-"Описание:"
+"Версия файла"
+"Описание"
 
-"Модули:"
+"Модули"
 "База"
 "Размер"
 "Путь, версия, описание"
 "Путь (версия и описание не показаны)"
-"Handles:"
+"Handles"
 "Handle"
 "Access"
 "Type"
@@ -160,18 +160,18 @@
 "/с"
 
 "Критерий сортировки"
-"&Имя                             Ctrl-F3"
-"&Расширение                      Ctrl-F4"
-"Время &старта                    Ctrl-F5"
-"Р&азмер                          Ctrl-F6"
-"&Не сортировать                  Ctrl-F7"
-"&Описания                        Ctrl-F10"
-"&Владельцы                       Ctrl-F11"
-"Использовать &группы сортировки  Shift-F11"
-"&Помеченные файлы вперед         Shift-F12"
+"&Имя                             Ctrl+F3"
+"&Расширение                      Ctrl+F4"
+"Р&азмер                          Ctrl+F6"
+"&Не сортировать                  Ctrl+F7"
+"Время &старта                    Ctrl+F8"
+"&Описания                        Ctrl+F10"
+"&Владельцы                       Ctrl+F11"
+"Использовать &группы сортировки  Shift+F11"
+"&Помеченные файлы вперед         Shift+F12"
 
-"Владелец:"
-"Сеанс:"
+"Владелец"
+"Сеанс"
 
 "Отказано в доступе"
 "Недостаточно привилегий"
