@@ -167,9 +167,9 @@ enum
 	MSortBy,
 	MSortByName,
 	MSortByExt,
-	MSortByTime,
 	MSortBySize,
 	MSortByUnsorted,
+	MSortByTime,
 	MSortByDescriptions,
 	MSortByOwner,
 	MUseSortGroups,
