@@ -1,3 +1,9 @@
+drkns 20.09.2020 01:27:58 +0100 - build 200
+
+1. Various sort menu fixes and improvements.
+
+2. Minor corrections.
+
 drkns 23.04.2020 01:45:14 +0300 - build 199
 
 1. Некорректное отображение имен некоторых хендлов.
